lsp: a build's own findings are rows, and the replay reads them
Diagnostics replayed what a build concluded from the ValidationReport object
the dev goal handed the workspace. Capture already writes those conclusions
down, so the replay reads them from the store's diagnostic view as one more
arm of the statement the batch already issues, and the report leaves the
workspace with the freshness gate that silenced it.

Two arms reach an editor for the first time: a schema that will not parse and
one that will not assemble each record their refusal before the throw, where
the incumbent silenced the whole replay exactly when the schema had just
broken. Severity is the view's column rather than a switch over the rejection
hierarchy, and the claim-conflict arm arrives as rows rather than as a second
derivation.

The re-anchoring of a finding onto a documented definition's name becomes a
fact about the document: the walk collects every description's span with the
name it documents, so judgement holds no tree-sitter node. The dev goal writes
its facts before it swaps, the swap being what triggers the recalculation that
reads them. A document with no directives now costs one statement rather than
none, that one question being what the build said about it.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01V4AuV8KKfeBEXoqg2o1Skf